--- a/CSS/stylesheet.css
+++ b/CSS/stylesheet.css
@@ -76,6 +76,48 @@ p
     background-color: rgba(173, 216, 230, 0.541);
 }
 
+
+.dropdown-menu-trigger {
+    background-color: lightblue;
+    margin-top: 16px;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    transition: all 0.4s ease;
+    z-index: 5000 !important;
+}
+
+.dropdown-menu-trigger:hover .dropdown {
+    top: 0px;
+}
+
+.dropdown-menu
+{
+    margin: 0px;
+    padding: 0px;
+    left:-100px;
+    list-style-type: none;
+}
+
+.dropdown {
+    position: absolute;
+    top: -400px;
+    height: auto;
+    margin-top: 66px;
+    width: auto;
+    background-color: lightblue;
+}
+
+.dropdown-item .menu-link
+{
+    color: white;
+    text-decoration: none;
+}
+
+.dropdown-item{
+    padding: 16px;
+}
+
 .form-group
 {
     display: flex;
